--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body class="bg-gradient-to-br from-[#fdf6f0] to-[#fae6df] text-[#4b3832]">
   <nav class="bg-[#d2b48c] py-4 shadow-md">
     <div class="max-w-6xl mx-auto px-6 flex justify-end space-x-6">
-      <a href="IngredientDeepDive.html" class="text-white font-medium hover:underline">Home</a>
+      <a href="index.html" class="text-white font-medium hover:underline">Home</a>
       <a href="#contact" class="text-white font-medium hover:underline">Contact</a>
     </div>
   </nav>
