--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="login-box" role="main" aria-labelledby="loginHeading">
-    <form id="loginForm" action="IngredientDeepDive.html" method="get" novalidate>
+    <form id="loginForm" action="IDD_main.html" method="get" novalidate>
       <h1 id="loginHeading">Login</h1>
 
       <label for="username">Username</label>
@@ -181,3 +181,4 @@
   </script>
 </body>
 </html>
+
